[gd_scene load_steps=3 format=3 uid="uid://luxudsvyvecw"]

[ext_resource type="PackedScene" uid="uid://mbnmc3xs1636" path="res://src/scenes/dialog/bag_item.tscn" id="1_h2hu7"]
[ext_resource type="Script" uid="uid://sprl0v5cdnsu" path="res://src/scenes/dialog/monster_info_drop_thing_item.gd" id="1_q0n58"]

[node name="MonsterInfoDropThingItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -384.0
offset_bottom = -1380.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0n58")

[node name="BagItem" parent="." instance=ExtResource("1_h2hu7")]
layout_mode = 2

[node name="DropRate" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "爆率"

[connection signal="item_show_bt_pressed" from="BagItem" to="." method="_on_bag_item_item_show_bt_pressed"]
